styles/index.css
nav {
	position: fixed;
	top: 0;
	z-index: 1000;

	height: 125px;
	width: 80vw;
	padding: 0 10vw;
	justify-content: space-between !important;

	background-color: white;

	ion-icon {
		cursor: pointer;
	}

	
	@media screen and (min-width: 1400px) {
		ion-icon {
			display: none;
		}
		a img {
			height: 75px;
			width: auto;
		}
	}
	
	@media screen and (max-width: 1400px) {
		height: 75px;
		a img {
			height: 50px;
			width: auto;
		}
	}
}

.links {
	width: fit-content;
	gap: 2rem;
}

.web-nav {
	@media screen and (max-width: 1400px) {
		display: none;
	}
}

.mob-nav {
	position: fixed;
	justify-content: flex-start;
	align-items: flex-end;
	flex-direction: column;
	opacity: 0;
	z-index: -10;

	top: 0;
	right: 0;
	width: 80vw;
	height: 100vh;
	padding: 4rem 10vw;

	background-color: var(--green);
	transition: opacity ease 300ms;

	a {
		color: white;
	}

	ion-icon {
		color: white;
		cursor: pointer;
	}
}

.shown {
	z-index: 1000;
	opacity: 1;
}

#hero {
	display: flex;
	justify-content: flex-start;
	align-items: center;
	min-height: 100vh;
	height: fit-content;
	
	@media screen and (max-width: 1400px) {
		flex-direction: column;
		justify-content: center;
		box-sizing: border-box;
		padding: 125px 0;
		gap: 2rem;
	}

	.center {
		width: 40%;
		justify-content: flex-start;
		
		@media screen and (max-width: 1400px) {
			width: 100%;

			h1 {
				text-align: center;
			}

			p {
				text-align: justify;
				text-align-last: center;
			}
		}

	}

	img {
		position: absolute;
		bottom: 0;
		right: 0;
		max-height: 1000px;
		max-width: 1000px;
		height: auto;
		width: 50vw;
		max-width: 50%;

		@media screen and (max-width: 1400px) {
			position: relative;
			max-width: 80%;
			width: 80%;
		}

		@media screen and (max-width: 600px) {
			display: none;
		}
	}
}

#about-bw {
	background-color: var(--green);
	width: 100vw;
	min-height: 100vh;

	color: white;

	img {
		border-radius: 4rem;
	}

	@media screen and (max-width: 1200px) {
		.window {
			flex-direction: column;
			justify-content: center;

			h1 {
				text-align: center;
			}

			p {
				text-align: justify;
				text-align-last: center;
			}

			.info {
				width: 100%;
			}

			img {
				max-width: 60%;
				height: auto;
				border-radius: 4vw;
			}
		}
	}
}

#details {
	background-color: #424242;
	width: 100vw;
	min-height: 100vh;
	height: fit-content;
	
	color: white;

	.window img {
		max-width: 40vw;
		width: 100%;
		height: auto;

		@media screen and (max-width: 600px) {
			display: none;
		}
	}

	.window .info h1 {
		font-size: 100px;

		@media screen and (max-width: 1400px) {
			font-size: 74px;
		}

		@media screen and (max-width: 600px) {
			font-size: 64px;
		}
	}

	@media screen and (max-width: 1400px) {
		.window {
			flex-direction: column;
			justify-content: center;
			gap: 2rem;

			.info {
				width: 100%;
				display: flex;
				flex-direction: column;
				justify-content: center;
				align-items: center;

				h1 {
					text-align: center;
				}

				p {
					text-align: justify;
					text-align-last: center;
				}

				a {
					display: flex;
					justify-content: center;
					align-items: center;
				}
			}
		}
	}
}

#theme {
	width: 100vw;
	min-height: 100vh;
	padding: 2rem 0;
	height: fit-content;

	.window {
		flex-wrap: wrap;
		height: 80%;

		.sub-info h2 {
			box-sizing: border-box;
		}

		@media screen and (max-width: 1000px) {
			flex-direction: column;
			flex-wrap: nowrap;
			justify-content: space-between;
			gap: 1rem;

			*:not(img) {
				width: 100%;
			}

			img {
				width: 60%;
			}

			.info h1 {
				text-align: center;
			}

			.sub-info * {
				text-align-last: center;
			}
		}
	}

	img {
		width: 40%;
		height: auto;
	}
}



#speakers {
	background-color: var(--green);
	width: 100vw;
	min-height: 100vh;
	height: fit-content;
	padding: 2rem 10vw;
	box-sizing: border-box;
	flex-wrap: wrap;

	color: white;

	.heading {
		display: flex;
		justify-content: flex-start;
		align-items: center;
	}

	.images {
		width: 45%;
		height: 60vh;

		display: grid;
		grid-template-columns: 50% 50%;
		row-gap: 3rem;
		justify-items: center;
	
		img {
			border-radius: 20%;
			width: auto;
			height: 100%;
		}

		@media screen and (max-width: 1500px) {
			grid-template-columns: auto;
			row-gap: 1rem;

			img {
				width: auto;
				height: 200px;
				border-radius: 2rem;
			}
		}

		@media screen and (max-width: 1000px) {
			display: none;
		}
	}

	.speaker-info {
		width: 55%;

		@media screen and (max-width: 1000px) {
			display: none;
		}
	}

	.speaker-info-small {
		padding: 2rem 0;
		height: fit-content;
		min-height: 100vh;

		.speaker {
			display: flex;
			flex-wrap: wrap;
			gap: 1rem;

			img {
				border-radius: 3vw;
				width: 35%;
				height: fit-content;
			}

			.heading {
				width: 100%;
			}

			p {
				width: 100%;	
			}
		}

		@media screen and (min-width: 1001px) {
			display: none;
		}
	}

	ion-icon {
		width: 20px;
		height: 20px;
		margin-right: 8px;
	}

	.special {
		width: 100vw;
		text-align: left;
	}

	@media screen and (max-width: 1000px) {
	}
}

#activities {
	background-color: #424242;
	width: 100vw;
	min-height: 100vh;
	height: fit-content;
	padding: 2rem 0;
	gap: 2rem;

	.main-info {
		height: 60%;
		width: 80vw;
	
		display: grid;
		grid-template-columns: 50% auto;
		align-items: center;
		justify-items: center;
		column-gap: 2rem;

		@media screen and (max-width: 1400px) {
			grid-template-columns: auto;
		}

		.text {
			img {
				@media screen and (min-width: 1400px) {
					display: none;
				}
			}
			
			h1 {
				color: white;
				text-align: center;
			}

			p {
				color: white;
				text-align-last: center;
			}
		}

		img {
			width: 100%;
			height: auto;
			border-radius: 4rem;
			
			@media screen and (max-width: 1400px) {
				display: none;
			}
		}

	}
	.cards {
		display: flex;
		justify-content: center;
		gap: 2rem;
		width: 80vw;
		flex-wrap: wrap;

		.card {
			width: 300px;
			box-sizing: border-box;
			border-radius: 2rem;
			padding: 1rem 1rem;
			text-align: center;
			text-align-last: center;

			h2 {
				font-size: 48px;

				@media screen and (max-width: 600px) {
					font-size: 28px;
				}
			}
		}

		.card:nth-child(even) {
			background-color: white;
			color: black;
		}

		.card:nth-child(odd) {
			background-color: var(--green);
			color: white;
		}
	}
}

.text a, .small-link-button {
	display: flex;
	align-items: center;
}

.text a ion-icon, .small-link-button ion-icon {
	width: 80px;
	height: 80px;
}

#students {
	min-height: 100vh;
	height: fit-content;
	width: 80vw;

	padding: 2rem 0;
	gap: 2rem;

	@media screen and (max-width: 1400px) {
		flex-direction: column;
	}

	.left, .right {
		height: 80%;
		justify-content: space-between;
	}

	.left {
		width: 40%;

		gap: 4rem;

		@media screen and (max-width: 1400px) {
			width: 100%;
			gap: 2rem;
		}
	}

	.left .sub-info {
		width: 100%;
	}

	.left .sub-info h2 {
		box-sizing: border-box;
	}

	.right {
		gap: 4rem;

		img {
			width: 100%;
			max-height: 100%;
			height: auto;
			padding: 1rem;
			box-sizing: border-box;
		}

		.lower {
			img {
				width: 50%;
			}

			.sub-info {
				width: 50%;

				h2 {
					box-sizing: border-box;
				}

				a {
					margin: 0 auto;
					width: fit-content;
					display: flex;
					align-items: center;
				}

				a ion-icon {
					width: 80px;
					height: 80px;
				}
			}

			@media screen and (max-width: 600px) {
				flex-direction: column;

				img, .sub-info {
					width: 100%;
				}
			}
		}

		@media screen and (max-width: 600px) {
			gap: 2rem;
		}
	}

}

#about-us {
	background-color: var(--green);
	color: white;

	width: 100vw;
	min-height: 100vh;
	height: fit-content;
	padding: 0 10vw;
	box-sizing: border-box;
	gap: 2rem;

	.center {
		width: 50%;
		gap: 1.5rem;

		.sub-info {
			width: 100%;

			h2 {
				background-color: #424242;
				box-sizing: border-box;
			}

			p {
				text-align-last: center;
			}

		}
	}

	img {
		border-radius: 3rem;
		width: 50%;
	}

	@media screen and (max-width: 1000px) {
		flex-direction: column;

		.center {
			width: 100%;
		}

		img {
			border-radius: 2rem;
			width: 75%;
		}
	}
}

#links {
	width: 100vw;
	min-height: 100vh;
	height: fit-content;
	gap: 2rem;

	box-sizing: border-box;
	padding: 3rem 10vw;

	img {
		width: 100%;
	}

	.right {
		min-height: 60%;
		height: fit-content;
		gap: 2rem;
		justify-content: space-between;

		h1 {
			text-align: center;
		}

		.banner {
			padding: 1rem;
			text-align: center;
			background-color: rgb(209, 72, 72);
			color: white;
		}
	

		.section {
			flex-wrap: wrap;
			row-gap: 1rem;
			column-gap: 0.5rem;

			h2 {
				width: 100%;
				text-align: center;
			}

			a {
				width: 45%;
				box-sizing: border-box;
				text-align: center;
				padding: 1rem 2rem;
				color: white;
				border-radius: 2rem;
			}

			a:nth-child(3), a:nth-child(4) {
				background-color: #424242;
			}

			a:nth-child(2), a:nth-child(5) {
				background-color: var(--green);
			}

			a:hover {
				font-weight: bold;
			}

			@media screen and (max-width: 600px) {
				flex-direction: column;

				a {
					width: 100%;
				}

				a:nth-child(even)
			}
		}
	}

	@media screen and (max-width: 1400px) {
		flex-direction: column-reverse;
	}
}

footer {
	width: 100vw;
	min-height: 100px;
	height: fit-content;
	padding: 2rem 0;
	border-top: #424242 solid;
	border-top-width: 1px;

	background-color: #ffffff;
	justify-content: space-evenly !important;

	img {
		height: 50px;
		width: auto;
	}

	a {
		font-size: 20px;
		color: var(--green);

		ion-icon {
			width: 48px !important;
			height: 48px !important;
		}
	}

	@media screen and (max-width: 1000px) {
		flex-direction: column;
		gap: 1rem;
	}
}

.info-split .window {
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.info-split .info {
	width: 50%;
}

.box-para {
	color: black;
	background-color: white;
	border-radius: 20px;
	padding: 1.5rem 2rem;
}

.info-split img {
	height: 550px;
	width: auto;
}

.sub-info {
	width: 46%;
}

.sub-info h2 {
	width: 100%;
	text-align: center;

	border-radius: 2rem;
	padding: 1rem 2rem;
	background-color: var(--green);
	color: white;
}

